--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".screens.questiondetails.QuestionDetailsActivity"></activity>
+        <activity
+            android:name=".screens.questiondetails.QuestionDetailsActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity
             android:name=".screens.questionslist.QuestionsListActivity"
             android:theme="@style/AppTheme.NoActionBar">
